--- a/Selenium.Utils/Selenium.Utils.csproj
+++ b/Selenium.Utils/Selenium.Utils.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Brower.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TakesScreenshot.cs" />
     <Compile Include="WebDriverFactory.cs" />
   </ItemGroup>
   <ItemGroup>
