--- a/ZetesVulcan.Test.BackOffice/packages.config
+++ b/ZetesVulcan.Test.BackOffice/packages.config
@@ -9,6 +9,8 @@
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
