--- a/ZetesVulcan.Test.BackOffice/packages.config
+++ b/ZetesVulcan.Test.BackOffice/packages.config
@@ -13,5 +13,6 @@
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriverBackedSelenium" version="3.141.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
 </packages>
