--- a/ZetesVulcan.Test.BackOffice/packages.config
+++ b/ZetesVulcan.Test.BackOffice/packages.config
@@ -1,18 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExtentReports" version="3.1.3" targetFramework="net461" />
+  <package id="DnsClient" version="1.0.7" targetFramework="net461" />
+  <package id="ExtentReports" version="4.0.3" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net461" />
-  <package id="MongoDB.Bson" version="2.4.0" targetFramework="net461" />
-  <package id="MongoDB.Driver" version="2.4.0" targetFramework="net461" />
-  <package id="MongoDB.Driver.Core" version="2.4.0" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.7.2" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.7.2" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.7.2" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriverBackedSelenium" version="3.141.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
 </packages>
