--- a/ZetesVulcan.Test.BackOffice/ZetesVulcan.Test.BackOffice.csproj
+++ b/ZetesVulcan.Test.BackOffice/ZetesVulcan.Test.BackOffice.csproj
@@ -115,6 +115,9 @@
   <ItemGroup>
     <Content Include="extent-config.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="resources\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
